--- a/page.css
+++ b/page.css
@@ -1,90 +1,168 @@
 body {
-    font-family: "Poppins", sans-serif;;
-    background: var(--bg-color);
-    color: var(--dark-gray);
+  font-family: "Poppins", sans-serif;
+  background: var(--bg-color);
+  color: var(--dark-gray);
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 button {
-    border: none;
-    background: none;
+  border: none;
+  background: none;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 .wrappler {
-    width: min(320px, 100%);
-    padding-inline: 20px;
-    margin: 0 auto;
+  width: min(100%, 768px);
+  padding-inline: 20px;
+  margin: 0 auto;
 }
 
-.def_btn {
-    cursor: pointer;
-    
-    background-color: var(--dark-gray);
-    color: var(--gray-100);
-    margin-top: 30px;
-
+.btn_box {
     display: flex;
     align-items: center;
     justify-content: center;
+}
 
-    width: 280px;
-    height: 60px;
+.def_btn {
+  cursor: pointer;
 
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 16px;
-    letter-spacing: 2px;
+  font-family: "Poppins", sans-serif;
+  border: 1px solid var(--dark-gray);
+  background-color: var(--dark-gray);
+  color: var(--gray-100);
+  margin-top: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: min(100%, 280px);
+  height: 60px;
+
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 2px;
+
+  transition: all var(--time-transition);
+}
+
+.def_btn:hover {
+  border: 1px solid var(--dark-gray);
+  background: var(--bg-color);
+  color: var(--dark-gray);
+}
+
+.def_input, .def_textarea {
+  outline: transparent;
+  background: none;
+  border: none;
+  border-bottom: 1px solid var(--gray-300);
+  padding-block: 10px;
+
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+
+  color: var(--dark-gray);
+  transition: all var(--time-transition);
+}
+
+.def_input:focus, .def_textarea:focus {
+  border-bottom: 1px solid var(--dark-gray);
+}
+
+.def_input::placeholder, .def_textarea::placeholder {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+
+  color: var(--gray-300);
+}
+
+.sucess--input,
+.sucess--input:focus {
+  border-bottom: 1px solid var(--lime-300);
+  color: var(--lime-300);
+}
+
+.error--input,
+.error--input:focus {
+  border-bottom: 1px solid var(--red);
+  color: var(--red);
 }
 
 .page_link {
-    position: relative;
+  position: relative;
 
-    text-decoration: none;
-    text-transform: uppercase;
+  text-decoration: none;
+  text-transform: uppercase;
 
-    width: fit-content;
-    color: var(--lime-300);
-    
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 18.2px;
+  width: fit-content;
+  color: var(--lime-300);
+
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18.2px;
 }
 
-.page_link::after {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: var(--lime-300);
+.page_link:hover::after {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: var(--lime-300);
+  animation: width_animate var(--time-transition) forwards;
 }
 
 .page__section {
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 .page__section__title {
-    color: var(--lime-300);
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 36px;
-    margin-bottom: 10px;
-};
-
-
+  color: var(--lime-300);
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  margin-bottom: 10px;
+}
 
 @media screen and (min-width: 768px) {
+  .wrappler {
+    width: min(1280px, 95%);
+    padding-inline: 27px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
     .wrappler {
-        width: min(768px, 100%);
-        padding-inline: 27px;
+      width: min(1440px, 95%);
+      padding-inline: 50px;
     }
+  }
+
+  @media screen and (min-width: 1440px) {
+    .wrappler {
+      padding-inline: 130px;
+    }
+  }
+
+@keyframes width_animate {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
 }
