--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 @import url(./tooth_powder.css);
 @import url(./pros_infos.css);
 @import url(./contatc_us.css);
-
+@import url(./footer.css);
 
 
 :root {
@@ -19,6 +19,8 @@
     --lime-300: #344F10;
     --lime-200: #8C9772;
     --lime-100: #E4DFD3;
+    --red: #EB5757;
+    --time-transition: 0.2s;
 }
 
 * {
