--- a/shop.css
+++ b/shop.css
@@ -35,27 +35,6 @@
     animation: width_animate var(--time-transition) forwards;
 }
 
-.card_product {
-    margin-top: 27px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-self: center;
-    gap: 20px;
-}
+.shop {
 
-.card_infos__title {
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 27px;
-    letter-spacing: 1px;
-}
-
-.card_infos__price {
-    margin-top: 10px;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 27px;
-    letter-spacing: 1px;
 }
