--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url(./page.css);
 @import url(./header.css);
+@import url(./hero.css);
 @import url(./menu.css);
 @import url(./roll_message.css);
 @import url(./about_our_brand.css);
@@ -9,6 +10,8 @@
 @import url(./pros_infos.css);
 @import url(./contatc_us.css);
 @import url(./footer.css);
+
+@import url(./products.css);
 
 :root {
     --bg-color: #E4DFD3 ;
