--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
-@import url(./page.css);
-@import url(./header.css);
-@import url(./hero.css);
-@import url(./menu.css);
-@import url(./roll_message.css);
-@import url(./about_our_brand.css);
-@import url(./shop.css);
-@import url(./about_the_creators.css);
-@import url(./tooth_powder.css);
-@import url(./pros_infos.css);
-@import url(./contatc_us.css);
-@import url(./footer.css);
+@import url(./src/styles/page.css);
+@import url(./src/styles/header.css);
+@import url(./src/styles/hero.css);
+@import url(./src/styles/menu.css);
+@import url(./src/styles/roll_message.css);
+@import url(./src/styles/about_our_brand.css);
+@import url(./src/styles/shop.css);
+@import url(./src/styles/about_the_creators.css);
+@import url(./src/styles/tooth_powder.css);
+@import url(./src/styles/pros_infos.css);
+@import url(./src/styles/contatc_us.css);
+@import url(./src/styles/back_to_top.css);
+@import url(./src/styles/footer.css);
 
-@import url(./products.css);
+@import url(./src/styles/products.css);
 
 :root {
     --bg-color: #E4DFD3 ;
