--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -7,6 +7,7 @@
     transform: translateX(100%);
     opacity: 0;
     transition: transform var(--time-transition), opacity 1s;
+    z-index: 100;
 }
 
 .menu.active {
