--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -1,7 +1,3 @@
-.products {
-
-}
-
 .card_product {
     margin-top: 27px;
     display: flex;
@@ -25,9 +21,9 @@
 
 .card_infos__price {
     margin-top: 10px;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 27px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18.2px;
     letter-spacing: 1px;
 }
 
@@ -40,4 +36,18 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+.about_product p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.about_product span {
+    color: var(--lime-300);
+}
+
+.about_product__ingredients p {
+
 }
