--- a/src/styles/tooth_powder.css
+++ b/src/styles/tooth_powder.css
@@ -27,7 +27,7 @@
     flex: 1;
     width: 182px;
     height: 100%;
-    background-image: url(./images/vector_jar.png);
+    background-image: url(../images/vector_jar.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
