--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url(./src/styles/page.css);
 @import url(./src/styles/header.css);
+@import url(./src/styles/cart.css);
 @import url(./src/styles/hero.css);
 @import url(./src/styles/menu.css);
 @import url(./src/styles/roll_message.css);
